--- a/index.html
+++ b/index.html
@@ -161,6 +161,18 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+  <script>
+window.embeddedChatbotConfig = {
+chatbotId: "1-YQflntDSuF9CjRyOlWz",
+domain: "www.chatbase.co"
+}
+</script>
+<script
+src="https://www.chatbase.co/embed.min.js"
+chatbotId="1-YQflntDSuF9CjRyOlWz"
+domain="www.chatbase.co"
+defer>
+</script>
 </body>
 
 </html>
